--- a/roles/dock/tasks/main.yml
+++ b/roles/dock/tasks/main.yml
@@ -12,11 +12,15 @@
 - name: Remove configured Dock items.
   ansible.builtin.include_tasks: dock-remove.yml
   loop: "{{ dockitems_remove }}"
+  loop_control:
+    loop_var: dock_remove_item
   tags: ['dock']
 
 - name: Ensure required dock items exist.
   ansible.builtin.include_tasks: dock-add.yml
   loop: "{{ dockitems_persist }}"
+  loop_control:
+    loop_var: dock_add_item
   tags: ['dock']
 
 - name: Ensure dock items are in correct position.
@@ -25,4 +29,6 @@
     - item.pos is defined
     - item.pos > 0
   loop: "{{ dockitems_persist }}"
+  loop_control:
+    loop_var: dock_move_item
   tags: ['dock']
