--- a/galaxy-deploy.yml
+++ b/galaxy-deploy.yml
@@ -10,43 +10,46 @@
 #   ansible-playbook -i 'localhost,' galaxy-deploy.yml \
 #   -e "github_tag=${{ github.ref }}"
 
-- hosts: localhost
+- name: Publish Ansible Collection to Ansible Galaxy
+  hosts: localhost
   connection: local
   gather_facts: false
 
   vars:
-    namespace: geerlingguy
+    namespace: FracKenA
     collection: mac
     # Requires github_tag to be set when calling playbook.
     release_tag: "{{ github_tag.split('/')[-1] }}"
 
   pre_tasks:
     - name: Ensure ANSIBLE_GALAXY_TOKEN is set.
-      fail:
+      ansible.builtin.fail:
         msg: A valid ANSIBLE_GALAXY_TOKEN must be set.
-      when: "lookup('env','ANSIBLE_GALAXY_TOKEN') | length == 0"
+      when: "lookup('env', 'ANSIBLE_GALAXY_TOKEN') | length == 0"
 
     - name: Ensure the ~/.ansible directory exists.
-      file:
+      ansible.builtin.file:
         path: ~/.ansible
         state: directory
+        mode: preserve
 
     - name: Write the Galaxy token to ~/.ansible/galaxy_token
-      copy:
+      ansible.builtin.copy:
         content: |
-          token: {{ lookup('env','ANSIBLE_GALAXY_TOKEN') }}
+          token: {{ lookup('env', 'ANSIBLE_GALAXY_TOKEN') }}
         dest: ~/.ansible/galaxy_token
+        mode: preserve
 
   tasks:
     - name: Ensure the galaxy.yml tag is up to date.
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: galaxy.yml
         regexp: "^version:"
         line: 'version: "{{ release_tag }}"'
 
     - name: Build the collection.
-      command: ansible-galaxy collection build
+      ansible.builtin.command: ansible-galaxy collection build
 
     - name: Publish the collection.
-      command: >
+      ansible.builtin.command: >
         ansible-galaxy collection publish ./{{ namespace }}-{{ collection }}-{{ release_tag }}.tar.gz
