--- a/roles/mas/defaults/main.yml
+++ b/roles/mas/defaults/main.yml
@@ -4,9 +4,8 @@ mas_password: ""
 mas_uninstalled_apps: []
 mas_installed_app_ids: []  # Deprecated
 mas_installed_apps:
-  - {id: 425264550, name: "Blackmagic Disk Speed Test (3.0)"}
-  - {id: 411643860, name: "DaisyDisk (4.3.2)"}
-  - {id: 498486288, name: "Quick Resizer (1.9)"}
-  - {id: 497799835, name: "Xcode (8.1)"}
+  - {id: 409203825, name: "Numbers"}
+  - {id: 409201541, name: "Pages"}
+  - {id: 409183694, name: "Keynode"}
 mas_upgrade_all_apps: false
 mas_signin_dialog: false
