--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "ansible.python.interpreterPath": "/opt/homebrew/bin/python3"
+    "ansible.python.interpreterPath": "/opt/homebrew/bin/python3",
+    "yaml.schemas": {
+        "https://raw.githubusercontent.com/ansible/ansible-lint/main/src/ansiblelint/schemas/galaxy.json": "file:///Users/kdobbins/git/ansible-collection-mac/galaxy-deploy.yml"
+    }
 }
