--- a/roles/dock/tasks/dock-position.yml
+++ b/roles/dock/tasks/dock-position.yml
@@ -1,16 +1,29 @@
 ---
-- name: "Check the current Dock position of {{ item.name | default(item) }}."
-  ansible.builtin.command:
-    cmd: dockutil --find '{{ item.name | default(item) }}'
+- name: Check the current Dock position of {{ item.name | default(item) }}.
+  ansible.builtin.shell:
+    cmd: "dockutil --find '{{ item.name | default(item) }}'"
+    executable: /bin/bash
   register: dock_item_position
-  failed_when: '"command not found" in dock_item_position.stdout'
+  failed_when: >
+    ("command not found" in dock_item_position.stdout) or
+    ("was not found" in dock_item_position.stdout) or
+    (dock_item_position.rc != 0)
   changed_when: false
+  tags: ['dock']
 
 - name: Get current dock item position from output.
   ansible.builtin.set_fact:
-    current_position: "{{ dock_item_position | regex_replace('^.*slot (.*) in.*$', '\\1') }}"
+    dock_current_position: "{{ dock_item_position.stdout | regex_replace('^.*slot (.*) in.*$', '\\1') }}"
+  tags: ['dock']
 
 - name: Move dock item to the correct position.
-  ansible.builtin.command:
-    cmd: dockutil --move '{{ item.name | default(item) }}' --position '{{ item.pos }}'
-  when: current_position|int != item.pos|int
+  ansible.builtin.shell:
+    cmd: "dockutil --move '{{ item.name | default(item) }}' --position '{{ item.pos }}'"
+    executable: /bin/bash
+  register: dock_move_position
+  when: dock_current_position|int != item.pos|int
+  changed_when: dock_move_position.rc == 0
+  failed_when: >
+    ("Move failed" in dock_move_position.stdout) or
+    (dock_move_position.rc != 0)
+  tags: ['dock']
