--- a/roles/dock/tasks/dock-remove.yml
+++ b/roles/dock/tasks/dock-remove.yml
@@ -1,22 +1,30 @@
 ---
-- name: Check dock for {{ item }}.
-  ansible.builtin.command:
-    cmd: dockutil --find '{{ item }}'
-  register: dockitem_exists
-  changed_when: false
+- name: Check dock for {{ dock_remove }}.
+  ansible.builtin.shell:
+    cmd: dockutil --find '{{ dock_remove }}'
+    executable: /bin/bash
+  register: dock_item_exists
   failed_when: >
-    "No such file or directory" in dockitem_exists.stdout
-    or "command not found" in dockitem_exists.stdout
+    ("command not found" in dock_item_exists.stdout) or
+    ("was not found" in dock_item_exists.stdout) or
+    (dock_item_exists.rc != 0)
+  changed_when: false
   tags: ['dock']
 
-- name: Removed {{  item }}.
-  ansible.builtin.command:
-    cmd: dockutil --remove '{{ item }}'
-  when: dockitem_exists.rc  == 0
+- name: Removed {{ dock_remove }}.
+  ansible.builtin.shell:
+    cmd: dockutil --remove '{{ dock_remove }}'
+    executable: /bin/bash
+  register: dock_item_removed
+  when: dock_item_exists.rc == 0
   tags: ['dock']
+  changed_when: dock_item_removed.rc == 0
+  failed_when: >
+    ("Remove failed" in dock_item_removed.stdout) or
+    (dock_item_removed.rc != 0)
 
 - name: Pause for 7 seconds between dock changes.
   ansible.builtin.pause:
     seconds: 7
-  when: dockitem_exists.rc == 0
+  when: dock_item_exists.rc == 0
   tags: ['dock']
