--- a/roles/homebrew/handlers/main.yml
+++ b/roles/homebrew/handlers/main.yml
@@ -5,6 +5,6 @@
   ansible.builtin.file:
     path: "{{ homebrew_cache_path.stdout | trim }}"
     state: absent
-  when: 'homebrew_clear_cache | bool'
-  become: "{{ (homebrew_user != ansible_user_id) | bool }}"
+  when: homebrew_clear_cache | bool
+  become: "{{ homebrew_user != ansible_user_id | bool }}"
   become_user: "{{ homebrew_user }}"
