--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -23,6 +23,7 @@
       ansible.builtin.file:
         path: "{{ homebrew_prefix }}"
         owner: root
+        group: wheel
         state: directory
         mode: u=rwx,g=rw,o=rx
 
