work on ci errors.

--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -8,6 +8,7 @@
 - name: Ensure Homebrew parent directory has correct permissions (M1).
   when: ansible_machine == 'arm64'
   become: true
+  become_method: sudo
   ansible.builtin.file:
     path: "{{ homebrew_prefix }}"
     owner: "{{ homebrew_user }}"
@@ -20,6 +21,7 @@
     - name: Ensure Homebrew parent directory has correct permissions (MacOS >= 10.13).
       when: "ansible_distribution_version is version('10.13', '>=')"
       become: true
+      become_method: sudo
       ansible.builtin.file:
         path: "{{ homebrew_prefix }}"
         owner: root
@@ -29,16 +31,11 @@
 
     - name: Ensure Homebrew parent directory has correct permissions (MacOS < 10.13).
       when: "ansible_distribution_version is version('10.13', '<')"
-      become: true
-      ansible.builtin.file:
-        path: "{{ homebrew_prefix }}"
-        owner: root
-        group: wheel
-        state: directory
-        mode: u=rwx,g=rwx,o=rx
+      failed_when: true
 
 - name: Ensure Homebrew directory exists.
   become: true
+  become_method: sudo
   ansible.builtin.file:
     path: "{{ homebrew_install_path }}"
     owner: "{{ homebrew_user }}"
