--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
----
 name: CI
 'on':
   pull_request:
@@ -17,16 +16,27 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.10']
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v3
         with:
           path: ansible_collections/frackena/mac
 
-      - name: Set up Python 3.
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: ${{ matrix.python-version }}
+      
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install test dependencies.
         run: pip3 install yamllint ansible-core ansible-lint
@@ -41,22 +51,22 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os:
-          - macos-latest
-
+        os: 
+          - 'macos-13'
+          - 'macos-12'
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v3
         with:
-          path: ansible_collections/FracKenA/mac
+          path: ansible_collections/frackena/mac
 
       - name: Uninstall GitHub Actions' built-in Homebrew.
         run: tests/uninstall-homebrew.sh
 
       - name: Uninstall GitHub Actions' built-in browser installs.
         run: |
-          sudo rm -rf /Applications/Firefox.app
-          sudo rm -rf /Applications/Google\ Chrome.app
+          sudo rm -rf /Applications/Firefox.app || true
+          sudo rm -rf /Applications/Google\ Chrome.app || true
 
       - name: Install test dependencies.
         run: |
@@ -67,17 +77,10 @@ jobs:
         run: |
           cp tests/ansible.cfg ./ansible.cfg
           cp tests/inventory ./inventory
-          ansible-galaxy collection install community.general
-          ansible-galaxy role install elliotweiser.osx-command-line-tools
+          ansible-galaxy install -r requirements.yml
 
       - name: Test the playbook's syntax.
         run: ansible-playbook tests/test.yml --syntax-check
-
-      - name: Output the current permissions of the /usr/local directory.
-        run: ls -al /usr/local
-
-      - name: Output the current permissions of the /usr directory.
-        run: ls -al /usr
 
       - name: Test the playbook.
         run: ansible-playbook tests/test.yml
@@ -91,3 +94,11 @@ jobs:
           tail ${idempotence} | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)
         env:
           ANSIBLE_FORCE_COLOR: '1'
+
+      - name: Output the current permissions of the /usr/local directory.
+        if: failure()
+        run: ls -al /usr/local
+
+      - name: Output the current permissions of the /usr directory.
+        if: failure()
+        run: ls -al /usr
